testsuite/tests/typecheck/should_fail/T20873d.stderr

T20873d.hs:10:1: error: [GHC-49378]
    • Illegal kind signature ‘Foo :: U Type’
    • In the data declaration for ‘Foo’
    Suggested fix: Perhaps you intended to use KindSignatures
